--- a/src/components/ui/HamburgerMenu/HamburgerMenu.css
+++ b/src/components/ui/HamburgerMenu/HamburgerMenu.css
@@ -4,6 +4,15 @@
     row-gap: .25rem;
     width: 30px;
     height: 30px;
+    cursor: pointer;
+}
+
+#hamburger-menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
 }
 
 #bars {
